<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.broadcast.BroadCastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="description" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_url_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="url access" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="upload image, if required"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="italic"
            android:text="Images with .jpg, .jpeg, and .png are supported. filesize must be smaller than 1M"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border_dotted_line"
            android:padding="16dp"
            >

            <TextView
                android:id="@+id/txt__img_ratio"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:ellipsize="start"
                android:gravity="center"
                android:maxLines="2"
                android:text="image with 2:1 ratio"
                android:textColor="#454545"
                app:layout_constraintBottom_toBottomOf="@id/btn_browse_img"
                app:layout_constraintEnd_toStartOf="@id/view_center_guideline"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_browse_img"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/btn_browse_img"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:ellipsize="start"
                android:maxLines="2"
                android:text="Browse"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/view_center_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_center_guideline"
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="186dp" />


            <ImageView
                android:id="@+id/img_chosen_pic"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:padding="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <ImageButton
                android:id="@+id/btn_del_img"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/circle_background_color"
                android:src="@drawable/ic_baseline_cancel_24"
                app:layout_constraintEnd_toEndOf="@+id/img_chosen_pic"
                app:layout_constraintTop_toTopOf="@+id/img_chosen_pic" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_img_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="start"
            android:text="Name : "
            android:textSize="12sp"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="broadcast to these topic"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:layout_marginTop="8dp"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_broadcast_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_topic"
            tools:itemCount="2"
            />

        <Button
            android:id="@+id/btn_broadcast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="broadcast"
            />

    </LinearLayout>

</ScrollView>